# atypik

./: .gitmodules  CONTRIBUTING.md  LICENSE  README.md  RichTypesInfo.html  RichTypesInfo.xsd
atypik/: CMakeLists.txt  main.cpp
atypik/belements/include/: any.h  assert.h  assignments.h  bdefaulttypes.h  becomesin.h  becomessuchthat.h  belement.h  belemfactory.h  binaryexp.h  binarypred.h  block.h  booleanexp.h  case.h  comparison.h  conditional.h  expression.h  ident.h  instruction.h  let.h  loop.h  naryexp.h  narysub.h  operation.h  operationcall.h  predicate.h  quantifiedexp.h  quantifiedpred.h  quantifiedset.h  select.h  set.h  skip.h  unaryexp.h  valuation.h  varin.h
atypik/belements/src/: CMakeLists.txt  any.cpp  assert.cpp  assignments.cpp  bdefaulttypes.cpp  becomesin.cpp  becomessuchthat.cpp  belemfactory.cpp  binaryexp.cpp  binarypred.cpp  block.cpp  booleanexp.cpp  case.cpp  comparison.cpp  conditional.cpp  expression.cpp  ident.cpp  let.cpp  loop.cpp  naryexp.cpp  narysub.cpp  operation.cpp  operationcall.cpp  predicate.cpp  quantifiedexp.cpp  quantifiedpred.cpp  quantifiedset.cpp  select.cpp  set.cpp  skip.cpp  unaryexp.cpp  valuation.cpp  varin.cpp
atypik/io/include/: bxmlparser.h  bxmlposition.h  context.h  machinetypes.h  parser.h  pogparser.h  writer.h
atypik/io/src/: CMakeLists.txt  bxmlparser.cpp  bxmlposition.cpp  context.cpp  machinetypes.cpp  parser.cpp  pogparser.cpp  writer.cpp
atypik/solver/include/: abstractsolverelement.h  assertion.h  btypes.h  constraint.h  error.h  model.h  modelset.h  solverfactory.h  vargen.h
atypik/solver/src/: CMakeLists.txt  assertion.cpp  btypes.cpp  constraint.cpp  error.cpp  model.cpp  modelset.cpp  solverfactory.cpp  vargen.cpp
atypik/test/: CMakeLists.txt  CTest.cmake  templategenerator.cpp  typescomp.cpp
atypik/test/data/test_arithmetic/expected/: Arithmetic.csv
atypik/test/data/test_arithmetic/src/: Arithmetic.bxml  Arithmetic.mch
atypik/test/data/test_explicit_typing/expected/: ExplicitTyping.csv
atypik/test/data/test_explicit_typing/src/: ExplicitTyping.bxml  ExplicitTyping.mch
atypik/test/data/test_functions/expected/: Functions.csv
atypik/test/data/test_functions/src/: Functions.bxml  Functions.mch
atypik/test/data/test_instructions/expected/: Instructions.csv  Instructions_i.csv  Instructions_r.csv  Operations.csv
atypik/test/data/test_instructions/src/: Instructions.bxml  Instructions.mch  Instructions_i.bxml  Instructions_i.imp  Instructions_r.bxml  Instructions_r.ref  Operations.bxml  Operations.mch
atypik/test/data/test_operations/expected/: Operations_i.csv
atypik/test/data/test_operations/src/: Operations_i.bxml  Operations_i.imp
atypik/test/data/test_pairs/expected/: Pairs.csv
atypik/test/data/test_pairs/src/: Pairs.bxml  Pairs.mch
atypik/test/data/test_parameters/src/: Parameters.bxml  Parameters.mch
atypik/test/data/test_relations/expected/: Relation.csv
atypik/test/data/test_relations/src/: Relation.bxml  Relation.mch
atypik/test/data/test_sets/expected/: Sets.csv  Sets_i.csv
atypik/test/data/test_sets/src/: Sets.bxml  Sets.mch  Sets_i.bxml  Sets_i.imp
atypik/test/include/: csverror.h  csvreader.h  csvwriter.h
atypik/test/src/: CMakeLists.txt  csverror.cpp  csvreader.cpp  csvwriter.cpp
atypik/tools/include/: timemanager.h
atypik/tools/src/: CMakeLists.txt  timemanager.cpp
